kubernetes-manifests/beer-api_deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: beer-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: beer-api
        version: v1
    spec:
      containers:
        - name: beer-api
          image: gcr.io/chrispage-dev/beer-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
