kubernetes-manifests/details-api_deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-api
  labels:
    app: details-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details-api
  template:
    metadata:
      labels:
        app: details-api
    spec:
      containers:
        - image: gcr.io/chrispage-dev/beer-details-api:0.4.0
          name: details-api
          ports:
            - containerPort: 8080
              name: details-api
