kubernetes-manifests/details-db_deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details-db
  template:
    metadata:
      labels:
        app: details-db
    spec:
      containers:
        - image: mysql:5.7.20
          name: details-db
          ports:
            - containerPort: 3306
              name: details-db
          volumeMounts:
            - name: details-db-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: details-db-initdb
          configMap:
            name: details-db-initdb-config
