kubernetes-manifests/likes-api_deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: likes-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: likes-api
        version: v1
    spec:
      containers:
        - name: likes-api
          image: gcr.io/chrispage-dev/beer-likes-api:2220133
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10000
