kubernetes-manifests/beer-api_lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beer-api-lb
  labels:
    app: beer-api
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  selector:
    app: beer-api
