kubernetes-manifests/beer-api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: beer-api-lb
spec:
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  selector:
    app: beer-api
  type: LoadBalancer
