kubernetes-manifests/details-api_lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: details-api-lb
  labels:
    app: details-api
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: details-api
