kubernetes-manifests/details-api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: details-api
  name: details-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: details-api
