kubernetes-manifests/details-db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: details-db
