kubernetes-manifests/likes-api_lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: likes-api-lb
  labels:
    app: likes-api
spec:
  type: LoadBalancer
  ports:
    - port: 10000
      name: grpc
      targetPort: 10000
  selector:
    app: likes-api
