kubernetes-manifests/likes-api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: likes-api
  labels:
    app: likes-api
spec:
  type: ClusterIP
  ports:
    - port: 10000
      name: grpc
  selector:
    app: likes-api
