kubernetes-manifests/reviews-api_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: reviews-api
  name: reviews-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: reviews-api
