kubernetes-manifests/reviews-db_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  type: ClusterIP
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: nodes
  selector:
    app: reviews-db
