kubernetes-manifests/beer-app.yaml
# Copyright 2018
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
################################################################################
# Beer API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: beer-api
  labels:
    app: beer-api
spec:
  ports:
    - port: 5000
      name: http
  selector:
    app: beer-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: beer-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: beer-api
        version: v1
    spec:
      containers:
        - name: beer-api
          image: gcr.io/chrispage-dev/beer-api:0.6.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
################################################################################
# Reviews API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-api
  labels:
    app: reviews-api
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: reviews-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: reviews-api
        version: v1
    spec:
      containers:
        - name: reviews-api
          image: gcr.io/chrispage-dev/beer-reviews-api:0.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
################################################################################
# Reviews DB service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-db
  labels:
    app: reviews-db
spec:
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: nodes
  selector:
    app: reviews-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews-db
        version: v1
    spec:
      containers:
        - name: reviews-db
          image: docker.elastic.co/elasticsearch/elasticsearch:6.1.1
          ports:
            - containerPort: 9200
              name: rest
            - containerPort: 9300
              name: nodes

################################################################################
# Details API service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: details-api
  labels:
    app: details-api
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: details-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: details-api
        version: v1
    spec:
      containers:
        - name: details-api
          image: gcr.io/chrispage-dev/beer-details-api:0.4.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m

################################################################################
# Details DB service
################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: details-db
  labels:
    app: details-db
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: details-db
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: details-db
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: details-db
        version: v1
    spec:
      containers:
        - name: details-db
          image: mysql:5.7.20
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: details-db-initdb
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: details-db-initdb
          configMap:
            name: details-db-initdb-config
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beer-api-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beer-api
spec:
  hosts:
  - "*"
  gateways:
  - beer-api-gateway
  http:
  - match:
    - uri:
        regex: /.*
    route:
    - destination:
        host: beer-api
        port:
          number: 5000
